UsingIngress/Python-Web-Portfolio/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-python-app-service
spec:
  type: NodePort
  selector: 
    app: sample-python-app
    
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30001
