UsingIngress/Python-Web-Portfolio/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example-host
spec:
  rules:
  - host: "vishwa.portfolio.com"
    http:
      paths:
      - pathType: Prefix
        path: "/portfolio"
        backend:
          service:
            name: sample-python-app-service
            port:
              number: 80
